loftee cleanup
